tests/ui/collect-unsized.rs
pub struct Unsized(str);

inventory::collect!(Unsized);

fn main() {}
